add functions to render archived and unarchive notes

--- a/src/template.html
+++ b/src/template.html
@@ -20,8 +20,13 @@
         <section-with-title title="Cari catatan" card-style>
           <form-find-note></form-find-note>
         </section-with-title>
-        <section-with-title title="Semua catatan">
-          <note-list></note-list>
+        <section-with-title title="Semua catatan" id="unarchiveNotes">
+          <note-list id="unarchive"></note-list>
+          <p id="unarchiveLoadingIndicator">Loading...</p>
+        </section-with-title>
+        <section-with-title title="Catatan arsip" id="archivedNotes">
+          <note-list id="archived"></note-list>
+          <p id="archivedLoadingIndicator">Loading...</p>
         </section-with-title>
       </article>
     </main>
