adding loading indicator custom element

--- a/src/template.html
+++ b/src/template.html
@@ -19,11 +19,11 @@
         </section-with-title>
         <section-with-title title="Semua catatan" id="unarchiveNotes">
           <note-list id="unarchive"></note-list>
-          <p id="unarchiveLoadingIndicator">Loading...</p>
+          <loading-indicator id="unarchiveLoadingIndicator">Memuat semua catatan</loading-indicator>
         </section-with-title>
         <section-with-title title="Catatan arsip" id="archivedNotes">
           <note-list id="archived"></note-list>
-          <p id="archivedLoadingIndicator">Loading...</p>
+          <loading-indicator id="archivedLoadingIndicator">Memuat catatan arsip</loading-indicator>
         </section-with-title>
       </article>
     </main>
